Setup Player Input

--- a/VehicleSeries/Config/DefaultEngine.ini
+++ b/VehicleSeries/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/_Level/NewMap.NewMap
+EditorStartupMap=/Game/_Level/NewMap.NewMap
+GlobalDefaultGameMode=/Game/Blueprints/BP_VSGameMode.BP_VSGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -14,4 +15,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/VehicleSeries")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/VehicleSeries")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="VehicleSeriesGameModeBase")
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
 
