--- a/VehicleSeries/Config/DefaultInput.ini
+++ b/VehicleSeries/Config/DefaultInput.ini
@@ -77,6 +77,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++AxisMappings=(AxisName="Fwd",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Fwd",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Str",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Str",Scale=1.000000,Key=D)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
