Added Third Person Character

--- a/VehicleSeries/Config/DefaultEngine.ini
+++ b/VehicleSeries/Config/DefaultEngine.ini
@@ -14,6 +14,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/VehicleSeries")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/VehicleSeries")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/VehicleSeries")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/VehicleSeries")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="VehicleSeriesGameModeBase")
 
 [/Script/Engine.RendererSettings]
